Trillo - fix container width overflow

--- a/Trillo/css/style.css
+++ b/Trillo/css/style.css
@@ -351,11 +351,12 @@ body {
   margin: 8rem auto;
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
+  overflow-x: hidden;
   min-height: 50rem; }
   @media only screen and (max-width: 75em) {
     .container {
       margin: 0;
-      min-width: 100vw;
+      min-width: 100%;
       min-height: 100vh;
       display: flex;
       flex-direction: column; } }
